# lyrtui

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml
.claude/skills/run-lmstui/: SKILL.md  driver.sh
.claude/skills/run-lyrtui/: SKILL.md  driver.sh
.github/workflows/: release.yml
docs/: index.html  style.css
screenshots/: lyrtui.tape
src/: api.rs  app.rs  artwork.rs  background.rs  cli.rs  config.rs  discovery.rs  events.rs  filter.rs  handlers.rs  main.rs  ui.rs  utils.rs
website/: index.html  style.css
