[package]
name = "lyrtui"
version = "0.1.10"
edition = "2024"
repository = "https://github.com/hjelev/lyrtui"
homepage = "https://github.com/hjelev/lyrtui"
description = "TUI for Lyrion Music Server"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
toml = "0.8"
dirs = "5"
ratatui-image = { version = "11", default-features = false, features = ["crossterm", "image-defaults"] }
image = "0.25"
color-thief = "0.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
